#VERSION 0.9.1#

 - minor change to css in Peak_View_Helper_Debugbar
 - added method postDispatchController() in Peak_Controller_Front

#VERSION 0.9.0#

 - fixed problem with method getProperties() with value when class is abstract or is an interface in class Peak_Zreflection
 - rewrited method getConstants() from Peak_Zreflection
 - modified method getProperties() to retreive also values of properties in class Peak_Zreflection
 - fixed Peak_View_Helper_Debugbar by encoding html entities in html/js code data 
 - added new internal controller class named Peak_Controller_Internal_Pkdoc
 - added new class named Peak_Zreflection_Class
 - fixed some class name of Peak_View_Helper_*
 - removed static verification from getPropertyVisibility() and getMethodVisibility() and static status to
   getMethods() and getProperties() instead in class Peak_Zreflection
 - renamed view helpers classes debugbar and js based on framework class naming convention
 - changed vars print order in class View_Helper_Debugbar
 - fixed method getPropertiesByInheritance() following the change of getProperties() in Peak_Zreflection
 - rewrited completly getProperties() to return all infos of properties in array format in Peak_Zreflection
 - modified method docTagsToArray() to accept object or array of object in Peak_Zreflection
 - fixed method getMethodsByInheritance() following the change of getMethods() in Peak_Zreflection
 - rewrited completly getMethods() to return all infos of methods in array format in Peak_Zreflection
 - added method getMethodDeclaration() in Peak_Zreflection
 - modified array key name inside method docTagsToArray() of class Peak_Zreflection
 - modified method getMethodDocTags() from Peak_Zreflection to use docTagsToArray() instead of 
   returning Zend_Reflection_Docblock object
 - fixed variable name error in method __call() of class Peak_Controller_Action
 - fixed array offset problem in _exception2table() of class Peak_Controller_Internal_PkError